# Drinks-Cabin

./: .gitignore  LICENSE  README.md  app.py  backup.py  functions.py  hourly.txt  lists.py  main.py  mongodb.py  pyproject.toml  todo.txt
drinks/: alcoholic.txt  fizzy.txt  juices.txt  popular.txt
static/: accordion.css  error.css  expand.css  expand.js  index.css
templates/: README.html  commands.html  error.html  gambling.html  index.html  leaderboard.html  profile.html  rules.html  shop.html  straws.html  success.html
